添加用户外键接口
